Removed extra files. Added wallpaper path to config wallpaper setting command (the wallpaper used by AlterLinux). Changed session name for x session. Added emacs and feh to package list. Added repository description to README.md.

--- a/plasma-i3.add/airootfs.any/etc/skel/.config/i3/config
+++ b/plasma-i3.add/airootfs.any/etc/skel/.config/i3/config
@@ -201,9 +201,9 @@ no_focus [class="plasmashell" window_type="notification"]
 for_window [title="Desktop — Plasma"] kill; floating enable; border none
 for_window [title="Arbeitsfläche — Plasma"] kill; floating enable; border none
 
-#themes
-sleep 3.7;feh --bg-fill <themes>
-sleep 3.9;feh --bg-fill <themes>
+#wallpaper 
+sleep 3.7;feh --bg-fill /usr/share/backgrounds/alter.png
+sleep 3.9;feh --bg-fill /usr/share/backgrounds/alter.png
 # gaps each window
 gaps outer 1
 gaps inner 13
