--- a/plasma-i3.add/airootfs.any/usr/share/xsessions/plasma-i3.desktop
+++ b/plasma-i3.add/airootfs.any/usr/share/xsessions/plasma-i3.desktop
@@ -2,5 +2,5 @@
 Type=XSession
 Exec=env KDEWM=/usr/bin/i3 /usr/bin/startplasma-x11
 DesktopNames=KDE
-Name=Plasma with i3
-Comment=Plasma with i3
+Name=i3-gaps mode
+Comment=i3-gaps mode
